# trilium-py

./: .gitignore  MANIFEST.in  README-CLI.md  README.md  README_CN.md  pyproject.toml  requirements.txt  setup.py  tox.ini
examples/turtl-to-markdown/: README.md  main.py
examples/uv/: README.md  ea_app_info.py  ea_upload_md_folder-generic-ignore.py  ea_upload_md_folder.py  ea_upload_md_folder_lite.py  get_etapi_token.py  uv-readme.md  xx-debug.py
src/trilium_py/: __init__.py  client.py  version.py  web_client.py
src/trilium_py/cli/: __init__.py  cli.py  options.py  utils.py
src/trilium_py/cli/commands/: __init__.py  config.py  info.py  notes.py
src/trilium_py/utils/: file_util.py  html_util.py  image_util.py  markdown_math.py  note_util.py  param_util.py  time_util.py  url_util.py
tests/: test_etapi.py  test_etapi_datetime.py  test_simple.py  test_todo.py
