[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Project secton added to support Pixi (by Prefix.dev)
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project]
name = "trilium-py"
# fetch from setup.py:
dynamic = ["description", "version","requires-python","authors","keywords","classifiers","dependencies","urls","readme","optional-dependencies"]

[tool.black]
skip-string-normalization = true
line-length = 100
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | \.history
  | build
  | dist
  | docs
  | hack
)/
'''


[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
trilium-py = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python-dateutil = ">=2.9.0,<2.10"
